[FEAT] ViewType 별로 매물 DTO 반환 -  서비스